# azcam-monitor

./: README.md  pyproject.toml
azcam_monitor/: __main__.py  azcammonitor.py
azcam_monitor/web/: fastapi_server.py
