[project]
name = "azcam-monitor"
version = "26.0"
description = "Monitor app for azcam"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = ["psutil", "fastapi", "uvicorn", "jinja2"]
requires-python = ">= 3.10"

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
azcammonitor = "azcam_monitor.__main__:main"
